<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView11"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:text="Duration Range (hour)"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/jobUrgencyPreference"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="@+id/backBut"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.518" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:text="Date Range (DD/MM/YYYY)"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/jobUrgencyPreference"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="@+id/backBut"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.711" />

    <EditText
        android:id="@+id/jobDatePreference"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="Min"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/jobDurationPreference"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView12"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.348" />

    <EditText
        android:id="@+id/jobDatePreference2"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="Max"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/jobDurationPreference2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/jobDurationPreference"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.348" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="205dp"
        android:layout_height="40dp"
        android:text="Salary Range ($CAD/hour)"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/jobUrgencyPreference"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.047"
        app:layout_constraintStart_toStartOf="@+id/backBut"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.326" />

    <EditText
        android:id="@+id/jobDurationPreference2"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="Max"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/jobSalaryPreference2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/jobDurationPreference"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.247" />

    <EditText
        android:id="@+id/jobDurationPreference"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="Min"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/jobSalaryPreference"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/textView11"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.247" />

    <EditText
        android:id="@+id/jobSalaryPreference2"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:ems="10"
        android:hint="@string/max"
        android:inputType="textPersonName"
        android:textSize="14sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/jobTitlePreference"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/jobSalaryPreference"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.123" />

    <EditText
        android:id="@+id/jobSalaryPreference"
        android:layout_width="75dp"
        android:layout_height="48dp"
        android:layout_marginBottom="50dp"
        android:ems="10"
        android:hint="@string/min"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.973"
        app:layout_constraintStart_toStartOf="@+id/textView6"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.145" />

    <EditText
        android:id="@+id/jobPlacePreference"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/place_city_postal_code2"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/jobDatePreference"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/backBut"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.442" />

    <EditText
        android:id="@+id/jobTitlePreference"
        android:layout_width="380dp"
        android:layout_height="48dp"
        android:ems="10"
        android:hint="@string/title"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/jobDatePreference"
        app:layout_constraintHorizontal_bias="0.013"
        app:layout_constraintStart_toStartOf="@+id/backBut"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.021" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="271dp"
        android:layout_height="48dp"
        android:text="@string/don_t_worry_you_can_always_come_back_and_change_this_later"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="14sp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPreference"
        app:layout_constraintVertical_bias="0.567" />

    <Button
        android:id="@+id/confirmPreference"
        android:layout_width="149dp"
        android:layout_height="64dp"
        android:backgroundTint="#BAA287"
        android:text="@string/confirm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/jobPlacePreference"
        app:layout_constraintVertical_bias="0.673" />

    <TextView
        android:id="@+id/preferenceStatusLabel"
        android:layout_width="380dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/confirmPreference"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/jobUrgencyPreference"
        app:layout_constraintTop_toBottomOf="@+id/jobPlacePreference"
        app:layout_constraintVertical_bias="0.651" />

    <CheckBox
        android:id="@+id/jobUrgencyPreference"
        android:layout_width="116dp"
        android:layout_height="48dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/urgent2"
        android:textAlignment="viewStart"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/jobPlacePreference"
        app:layout_constraintTop_toBottomOf="@+id/textView7"
        app:layout_constraintVertical_bias="0.554" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="241dp"
        android:layout_height="70dp"
        android:fontFamily="sans-serif-black"
        android:padding="10dp"
        android:text="@string/preferences2"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/backBut"
        android:layout_width="58dp"
        android:layout_height="61dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="#BDD4F1"
        android:clickable="true"
        android:contentDescription="@string/back_button"
        app:backgroundTintMode="add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <ImageView
        android:id="@+id/left_peek"
        android:layout_width="108dp"
        android:layout_height="203dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintEnd_toStartOf="@+id/confirmPreference"
        app:layout_constraintTop_toBottomOf="@+id/jobUrgencyPreference"
        app:srcCompat="@drawable/left_peak" />

    <ImageView
        android:id="@+id/right_peek"
        android:layout_width="58dp"
        android:layout_height="185dp"
        android:layout_marginStart="224dp"
        android:layout_marginTop="96dp"
        app:layout_constraintStart_toEndOf="@+id/jobUrgencyPreference"
        app:layout_constraintTop_toBottomOf="@+id/jobDatePreference2"
        app:srcCompat="@drawable/right_peak" />

</androidx.constraintlayout.widget.ConstraintLayout>