...
    <string name="security">Security</string>
    <string name="registerButton">REGISTER</string>
    <string name="add_job_posting">Add Job Posting</string>
    <string name="phone_number">Phone Number*</string>
    <string name="preferences">Preferences</string>

    <string name="INVALID_TITLE">Provide a Title greater than 3 characters.</string>
    <string name="INVALID_DESCRIPTION">Provide a description greater than 5 characters.</string>
    <string name="INVALID_DATE">Invalid date.</string>
    <string name="PAST_DATE">Past date.</string>
    <string name="INVALID_DURATION">Duration (hours) should be greater than 0.</string>
    <string name="INVALID_PLACE">Invalid Place.</string>
    <string name="INVALID_SALARY">Salary should be greater than or equal to 5 CAD.</string>
    <string name="INVALID_EMPLOYEE">This email isn\'t linked to any known Worm.</string>
    <string name="EMPTY_STRING"></string>
    <string name="Profile">Profile</string>
    <string name="INVALID_HOURLY">Hourly wage should be greater than 0.</string>
    <string name="INVALID_HOURS">Hours worked should be greater than 0.</string>
    <string name="don_t_worry_you_can_always_come_back_and_change_this_later">Don\'t worry, you can always come back and change this later.</string>
...
    <string name="attachment_summary_off">Only download attachments when manually requested.</string>
    <string name="settings">settings</string>
    <string name="close_listing">Close Listing</string>
    <string name="profile">Profile</string>
    <string name="search">Search</string>
    <string name="INVALID_SALARY_RANGE">Salary range is invalid.</string>
    <string name="INVALID_DURATION_RANGE">Duration range is invalid.</string>
    <string name="INVALID_DATE_RANGE">Date range is invalid.</string>
    <string name="dollar">$</string>
    <string name="perhour">/hour</string>
    <string name="job_search">Search Jobs</string>
    <string name="searchC">Search</string>
    <string name="email_of_worm_for_hire">Email of Worm-for-Hire:</string>
    <string name="make_payment">Make Payment</string>
...
